--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 1.3
+ - feature:     TECH10 section is now parsed into $tech10 by readModels
+
 Version 1.2
  - notice:      MplusAutomation examples vignette updated to refer to readModels, not outmoded extract* functions
  - feature:     New pathfilter argument to readModels allows for selection of outputs to read based both on path name (pathfilter) and file name (filefilter)
