--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 Version 1.3
  - feature:     TECH10 section is now parsed into $tech10 by readModels
+ - feature:     mplusModel now supports update() semantics like mplusObject and base R objects
 
 Version 1.2
  - notice:      MplusAutomation examples vignette updated to refer to readModels, not outmoded extract* functions
